--- a/styles/style.css
+++ b/styles/style.css
@@ -9,19 +9,224 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  display: flex;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+
+}
+
+.logo_place_header {
+  width: 183px;
+  height: 32px;
+}
+
+.header__title {
+
+}
+
+.header__subtitle {
+
+}
+
+.header__main-illustration {
+  background-image: url(/images/header-image.png);
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.content {
+
+}
+
+.description {
+
+}
+
+.two-columns {
+
+}
+
+.two-columns__brief {
+
+}
+
+.two-columns__main-text {
+
+}
+
+.two-columns__paragraph {
+
+}
+
+.two-columns__span-accent {
+
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1100px;
+  margin: 100 auto;
+}
+
+.section-title {
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.section-subtitle {
+  width: 69%;
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+  margin: 20px auto 0;
+}
+
+.table {
+  width: 1100px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between; /*элементы таблицы равномерно распределяться по ширине контейнера*/
+  margin: 0;
+  padding: 0;
+}
+
+.table__cell {
+  width: 250px;
+  margin: 60px 0 0 0;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  margin-bottom: 20px;
+}
+
+.table__text {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.feynman {
+
+}
+
+.feynman__title {
+
+}
+
+feynman__subtitle {
+
+}
+
+.feynman__link {
+
+}
+
+.feynman__imgs {
+
+}
+
+.kaufman {
+  background-color: black;
+  padding: 9px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table_theme_dark {
+  color: white;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+.kaufman__triangle {
+  background-image: url(/images/kaufman-triangle.svg);
+  position: absolute;
+  right: 210px;
+  top; 0;
+  width: 877px;
+  height: 877px;
+  background-size: cover;
+  z-index: -1;
+}
+
+.footer {
+
+}
+
+.footer__columns {
+
+}
+
+.footer__column_content_copyright {
+
+}
+
+.logo_place_footer {
+
+}
+
+.footer__author {
+
+}
+
+.footer__column_content_info {
+
+}
+
+.footer__column-heading {
+
+}
+
+.footer__column-links {
+
+}
+
+.footer__column-link {
+
+}
+
+.footer__column_content_social {
+
+}
+
+.footer__social-icon {
+
 }
