--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .header {
@@ -11,68 +11,121 @@
   max-height: 756px;
   background-color: #f2f2f2;
   display: flex;
+  margin: 0 auto 100px auto;
+  position: relative;
+  align-items: center;
 }
 
 .logo {
-
-}
-
-.logo_place_header {
   width: 183px;
   height: 32px;
 }
 
-.header__title {
+.logo_place_header {
+   position: absolute;
+   top: 30px;
+   left: 64px;
+   z-index: 1;
+}
 
+.header__title {
+  margin: 0 0 0 64px;
+  display: flex;
+  align-items: center;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  z-index: 1;
 }
 
 .header__subtitle {
-
+  margin: 0;
+  width: 388px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 1;  
+}
+.header__link {
+  color: #2f80ed;
 }
 
 .header__main-illustration {
-  background-image: url(/images/header-image.png);
+  background-size: cover;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 0;
 }
 
 .header__square-pic {
+  background-color: #2f80ed;
   height: 568px;
   width: 568px;
-}
-
-.content {
-
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: -1;
 }
 
 .description {
-
+  margin: 100px auto;
+  display: flex;
 }
 
 .two-columns {
-
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .two-columns__brief {
-
+  margin: 0;
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color:#2f80ed;
+  flex-shrink: 0;
 }
 
 .two-columns__main-text {
-
+  width: 80%;
+  min-width: 784px;
 }
 
 .two-columns__paragraph {
+  margin: 0;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin-bottom: 30px;
+  padding: 0;
+}
 
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
-
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 34px;
 }
 
 .digits {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1100px;
   margin: 100 auto;
+  position: relative;
 }
 
 .section-title {
@@ -80,15 +133,17 @@
   font-size: 60px;
   line-height: 1.15;
   text-align: center;
-  margin: 0 auto;
+  font-weight: bold;
+  margin: 100px auto 20px auto;
 }
 
 .section-subtitle {
-  width: 69%;
+  width: 60%;
   font-size: 24px;
   line-height: 34px;
   text-align: center;
-  margin: 20px auto 0;
+  font-weight: normal;
+  margin: auto 0;
 }
 
 .table {
@@ -98,7 +153,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between; /*элементы таблицы равномерно распределяться по ширине контейнера*/
-  margin: 0;
+  margin: 0 auto 100px;
   padding: 0;
 }
 
@@ -110,46 +165,83 @@
 .table__heading {
   font-size: 24px;
   line-height: 1.15;
+  font-weight: bold;
   margin-bottom: 20px;
+  margin-top: 0;
 }
 
 .table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
   margin: 20px 0;
   font-size: 18px;
+  margin-bottom: 0;
 }
 
 .feynman {
-
+  margin: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 890px;
+  background-color: #f2f2f2;
 }
 
 .feynman__title {
-
+  margin: 100px auto 70px auto;
+  width: 648px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: bold;
+  text-align: center;
+  z-index: 1;
 }
 
-feynman__subtitle {
-
+.feynman__subtitle {
+  margin: 0;
+  text-align: center;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  z-index: 1;
 }
 
 .feynman__link {
-
+  margin: 0;
+  position: absolute;
+  right: 48px;
+  top: 445px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  color: #2f80ed;
+  z-index: 1;
 }
 
-.feynman__imgs {
-
+.feynman__img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 867px;
+  height: 637px;
+  z-index: 0;
 }
 
 .kaufman {
-  background-color: black;
-  padding: 9px 0;
+  background-color: #1f1f1f;
   display: flex;
+  padding: 90px 0;
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: 0;
   overflow: hidden;
+  z-index: 0;
 }
 
 .section-title_theme_dark {
+  margin-top: 0;
+  margin-bottom: 20px;
   color: white;
 }
 
@@ -159,13 +251,13 @@ feynman__subtitle {
 
 .table_theme_dark {
   color: white;
+  margin-bottom: 0;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin: 80px 0 0 0;
 }
 
 .table__heading_theme_dark {
@@ -177,10 +269,10 @@ feynman__subtitle {
 }
 
 .kaufman__triangle {
-  background-image: url(/images/kaufman-triangle.svg);
+  background-image: url(../images/kaufman-triangle.svg);
   position: absolute;
-  right: 210px;
-  top; 0;
+  right: -210px;
+  top: 0;
   width: 877px;
   height: 877px;
   background-size: cover;
@@ -188,45 +280,99 @@ feynman__subtitle {
 }
 
 .footer {
-
+  background-color:#1f1f1f;
+  min-height: 350px;
+  display: flex;
 }
 
+/*весь контейнер в подвале*/
 .footer__columns {
-
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  color: #ffffff;
+  width: 90%;
+  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
+/*левая часть контейнера с лого и автором*/
 .footer__column_content_copyright {
-
+  color: #ffffff;
+  flex-basis: 711px;
+  padding-bottom: 0;
+  position: relative;
 }
 
+/*лого*/
 .logo_place_footer {
-
+  width: 183px;
+  height: 35px;
 }
 
+/*автор*/
 .footer__author {
-
+  color: #ffffff;
+  line-height: 25px;
+  font-size: 18px;
+  font-style: normal;
+  padding-top: 18px;
+  padding-bottom: 18px;  
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
+/*колонка о практикуме*/
 .footer__column_content_info {
-
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
+/*о практикуме*/
 .footer__column-heading {
-
+  color: #ffffff;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-
+ 
+/*маленький блок под "о практикуме"*/
 .footer__column-links {
-
+  color: #ffffff;
+  display: flex;
+  flex-flow: column;
+  list-style-type: none;
+  padding-left: 0;
+  padding-top: 20px;
+  margin-top: 0;
 }
 
+/*формат отдельных ячеек "главная, концепция, наставники, вконтакте, facebook, instagram"*/
 .footer__column-link {
+  color: #ffffff;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
 
 }
 
+/*колонка соцсети*/
 .footer__column_content_social {
-
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
+/*иконки соцсетей*/
 .footer__social-icon {
-
+  margin-right: 10px;
+  /*width: 16px;
+  height: 16px;*/
 }
