--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
   margin: 0 auto 100px auto;
   position: relative;
   align-items: center;
+  z-index: 0;
 }
 
 .logo {
@@ -52,6 +53,7 @@
 }
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -76,7 +78,6 @@
 
 .description {
   margin: 100px auto;
-  display: flex;
 }
 
 .two-columns {
@@ -88,7 +89,7 @@
 
 .two-columns__brief {
   margin: 0;
-  width: 175px;
+  max-width: 175px;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
@@ -116,8 +117,6 @@
 
 .two-columns__span-accent {
   font-weight: bold;
-  font-size: 24px;
-  line-height: 34px;
 }
 
 .digits {
@@ -179,17 +178,25 @@
 }
 
 .feynman {
-  margin: auto;
-  position: relative;
   display: flex;
+  position: relative;
   flex-direction: column;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+  z-index: 0;
+}
+
+.feynman__img {
+  z-index: -1;
 }
 
 .feynman__title {
   margin: 100px auto 70px auto;
-  width: 648px;
+  max-width: 648px;
   font-size: 120px;
   line-height: 1.15;
   font-weight: bold;
@@ -198,7 +205,7 @@
 }
 
 .feynman__subtitle {
-  margin: 0;
+  margin-top: 0;
   text-align: center;
   font-size: 36px;
   line-height: 51px;
@@ -215,21 +222,12 @@
   line-height: 51px;
   font-weight: normal;
   color: #2f80ed;
+  text-decoration: none;
   z-index: 1;
-}
-
-.feynman__img {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 867px;
-  height: 637px;
-  z-index: 0;
 }
 
 .kaufman {
   background-color: #1f1f1f;
-  display: flex;
   padding: 90px 0;
   flex-direction: column;
   align-items: center;
@@ -246,6 +244,7 @@
 
 .section-subtitle_theme_dark {
   color: white;
+  margin: auto;
 }
 
 .table_theme_dark {
@@ -300,7 +299,9 @@
   color: #ffffff;
   flex-basis: 711px;
   padding-bottom: 0;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /*лого*/
@@ -316,18 +317,12 @@
   font-size: 18px;
   font-style: normal;
   padding-top: 18px;
-  padding-bottom: 18px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  margin-bottom: 18px;
 }
 
 /*колонка о практикуме*/
 .footer__column_content_info {
   color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
 }
 
 /*о практикуме*/
@@ -343,8 +338,6 @@
 /*маленький блок под "о практикуме"*/
 .footer__column-links {
   color: #ffffff;
-  display: flex;
-  flex-flow: column;
   list-style-type: none;
   padding-left: 0;
   padding-top: 20px;
@@ -364,14 +357,9 @@
 /*колонка соцсети*/
 .footer__column_content_social {
   color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
 }
 
 /*иконки соцсетей*/
 .footer__social-icon {
   margin-right: 10px;
-  /*width: 16px;
-  height: 16px;*/
 }
