--- a/styles/style.css
+++ b/styles/style.css
@@ -120,9 +120,6 @@
 }
 
 .digits {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 100 auto;
   position: relative;
 }
@@ -137,12 +134,12 @@
 }
 
 .section-subtitle {
+  margin: auto;
   width: 60%;
   font-size: 24px;
   line-height: 34px;
   text-align: center;
   font-weight: normal;
-  margin: auto 0;
 }
 
 .table {
@@ -205,7 +202,8 @@
 }
 
 .feynman__subtitle {
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
   text-align: center;
   font-size: 36px;
   line-height: 51px;
@@ -229,7 +227,6 @@
 .kaufman {
   background-color: #1f1f1f;
   padding: 90px 0;
-  flex-direction: column;
   align-items: center;
   position: relative;
   overflow: hidden;
